Tests_results/invalid_tests/invalid_inst.as
; Unknown instructions and bad operands

main:      ad r3, r1
LOOP:      move r3, r2
bne
stop r4
jsr r1, r2
jmp r1, r2
clr
cmp #7
lea #4, r3
add #5, #6
jmp &r4
print r1
prn "a"
mov ,r3
add r2 r1